include_HEADERS = \
  zCommon.h \
	zObject.h \
	zReference.h \
	zArray.h \
	zTester.h \
	zLogger.h \
	zLoggerAppender.h \
	zLoggerAppenderConsole.h \
	zMutex.h \
	zScopeMutex.h \
	zBuffer.h \
	zString.h \
	zStringBuffer.h


#	zBuffer.h
#	zEvent.h \
#	zThread.h \
#	zFile.h \
#	zEvent.h \
#	zRandom.h \
#	zStringTokenizer.h \
#	zStringBuffer.h \
#	zVectorString.h \
#	zSocketAddress.h \
#	zSocketAddressIPv4.h \
#	zSocketAddressIPv6.h \
#	zSocketBase.h \
#	zSocketIP.h \
#	zSocketTCP.h \
#	zSocketTCPClient.h \
#	zSocketTCPServer.h \
#	zSocketTCPServerListener.h \
#	zSocketTCPConnection.h \
#	zSocketTCPConnectionListener.h
