include_HEADERS = \
  zCommon.h \
	zObject.h \
	zReference.h \
	zArray.h \
	zTester.h \
	zLogger.h \
	zLoggerAppender.h \
	zLoggerAppenderConsole.h \
	zMutex.h \
	zScopeMutex.h \
	zBuffer.h \
	zString.h \
	zStringBuilder.h \
	zEvent.h \
	zThread.h \
	zFile.h \
	zStream.h \
	zRandom.h \
	zGetOpt.h \
	zConsole.h \
	zStringTokenizer.h

