lib_LTLIBRARIES = libzanbase.la

libzanbase_la_CPPFLAGS = -I$(top_srcdir)/include
libzanbase_la_SOURCES = \
	zObject.cpp \
	zReference.cpp \
	zArray.cpp \ 
	zTester.cpp
#	zBuffer.cpp \
#	zEvent.cpp \
#	zThread.cpp \
#	zFile.cpp \
#	zMutex.cpp \
#	zScopeMutex.cpp \
#	zRandom.cpp \
#	zString.cpp \
#	zStringTokenizer.cpp \
#	zStringBuffer.cpp \
#	zVector.cpp \
#	zVectorString.cpp \
#	zSocketAddress.cpp \
#	zSocketAddressIPv4.cpp \
#	zSocketAddressIPv6.cpp \
#	zSocketBase.cpp \
#	zSocketIP.cpp \
#	zSocketTCP.cpp \
#	zSocketTCPClient.cpp \
#	zSocketTCPServer.cpp \
#	zSocketTCPServerListener.cpp \
#	zSocketTCPConnection.cpp \
#	zSocketTCPConnectionListener.cpp \
#	zLogger.cpp \
#	zLoggerAppender.cpp \
#	zLoggerAppenderConsole.cpp
