lib_LTLIBRARIES = libzanbase.la

libzanbase_la_CPPFLAGS = -I$(top_srcdir)/include
libzanbase_la_SOURCES = \
	zObject.cpp \
	zReference.cpp \
	zTester.cpp \
	zLogger.cpp \
	zLoggerAppender.cpp \
	zLoggerAppenderConsole.cpp \
	zMutex.cpp \
	zScopeMutex.cpp \
	zBuffer.cpp \
	zString.cpp \
	zStringBuilder.cpp \
	zEvent.cpp \
	zThread.cpp \
	zFile.cpp \
	zRandom.cpp \
	zStringTokenizer.cpp

